--- a/index.html
+++ b/index.html
@@ -7,6 +7,60 @@
     <link rel="stylesheet" href="src/output.css" />
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <!-- hero section start -->
+    <section id="home" class="pt-36">
+      <div class="container">
+        <div class="flex flex-wrap">
+          <div class="w-full self-center px-4 lg:w-1/2">
+            <h1 class="text-base font-semibold text-primary md:text-xl">
+              Halo Semua 👋🏿, Saya
+              <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl"
+                >Meliusa Nora Hariyanti</span
+              >
+            </h1>
+            <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">
+              <span class="text-dark">Fresh Graduate</span>
+              with Fullstack Developer, System Analyst, Quality Assurance
+              Experience
+            </h2>
+            <p class="font-medium text-slate-400 mb-10 leading-relaxed">
+              Belajar web programming itu mudah dan menyenangkan bukan.
+              <span class="text-dark font-bold">bukan!</span>
+            </p>
+            <a
+              href="#"
+              class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:bg-teal-400 hover:opacity-80 transition duration-300 ease-in-out"
+              >Hubungi Saya</a
+            >
+          </div>
+          <div class="w-full self-end px-4 lg:w-1/2">
+            <div class="relative mt-10 lg:mt-9 lg:right-0">
+              <img
+                src="src/img/meliusa.png"
+                alt="Meliusa Nora Hariyanti"
+                class="max-w-full mx-auto"
+              />
+              <span
+                class="absolute bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-125"
+              >
+                <svg
+                  width="400"
+                  height="400"
+                  viewBox="0 0 200 200"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill="#14B8A6"
+                    d="M34.4,-47.3C45.7,-39.2,56.6,-30.6,65.3,-17.9C74.1,-5.2,80.7,11.6,76.1,24.5C71.6,37.3,55.9,46.3,41.3,54.4C26.8,62.5,13.4,69.8,-1.5,71.8C-16.3,73.8,-32.6,70.6,-46.5,62.3C-60.5,54,-72,40.5,-74.6,25.8C-77.2,11.1,-71,-5,-65.7,-21.4C-60.5,-37.9,-56.2,-54.7,-45.4,-62.9C-34.6,-71.1,-17.3,-70.7,-2.9,-66.8C11.6,-62.9,23.2,-55.4,34.4,-47.3Z"
+                    transform="translate(100 100) scale(1)"
+                  />
+                </svg>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- hero section end -->
   </body>
 </html>
