--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
               >
             </h1>
             <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">
-              <span class="text-dark">Fresh Graduate</span>
-              with Fullstack Developer, System Analyst, Quality Assurance
-              Experience
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe,
+              voluptas.
+              <span class="text-dark">Lorem, ipsum.</span>
             </h2>
             <p class="font-medium text-secondary mb-10 leading-relaxed">
-              Belajar web programming itu mudah dan menyenangkan bukan.
-              <span class="text-dark font-bold">bukan!</span>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <span class="text-dark font-bold">Lorem.!</span>
             </p>
             <a
               href="#"
@@ -156,7 +156,7 @@
               Tentang Saya
             </h4>
             <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">
-              Yuk belajar web programming
+              Lorem ipsum dolor sit.
             </h2>
             <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
@@ -236,6 +236,92 @@
       </div>
     </section>
     <!-- about section end -->
+
+    <!-- portfolio section start -->
+    <section id="portfolio" class="pt-36 pb-16 bg-slate-100">
+      <div class="container">
+        <div class="w-full px-4">
+          <div class="max-w-xl mx-auto text-center mb-16">
+            <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
+            <h2 class="font-bold text-dark text-3xl mb-4">Project Terbaru</h2>
+            <p class="font-medium text-md text-secondary">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+              mollitia impedit aperiam voluptatem natus provident suscipit
+              tempora reprehenderit excepturi molestias!
+            </p>
+          </div>
+        </div>
+        <div
+          class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto"
+        >
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="src/img/portfolio/1.jpg"
+                alt="Portfolio 1"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-dark text-xl mt-5 mb-3">
+              Lorem ipsum dolor sit.
+            </h3>
+            <p class="font-medium text-base text-secondary">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum,
+              dolores? In, odit.
+            </p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="src/img/portfolio/1.jpg"
+                alt="Portfolio 1"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-dark text-xl mt-5 mb-3">
+              Lorem ipsum dolor sit.
+            </h3>
+            <p class="font-medium text-base text-secondary">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum,
+              dolores? In, odit.
+            </p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="src/img/portfolio/1.jpg"
+                alt="Portfolio 1"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-dark text-xl mt-5 mb-3">
+              Lorem ipsum dolor sit.
+            </h3>
+            <p class="font-medium text-base text-secondary">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum,
+              dolores? In, odit.
+            </p>
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
+              <img
+                src="src/img/portfolio/1.jpg"
+                alt="Portfolio 1"
+                width="w-full"
+              />
+            </div>
+            <h3 class="font-semibold text-dark text-xl mt-5 mb-3">
+              Lorem ipsum dolor sit.
+            </h3>
+            <p class="font-medium text-base text-secondary">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum,
+              dolores? In, odit.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- portfolio section end -->
 
     <script src="src/js/script.js"></script>
   </body>
