--- a/index.html
+++ b/index.html
@@ -243,8 +243,12 @@
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
-            <h2 class="font-bold text-dark text-3xl mb-4">Project Terbaru</h2>
-            <p class="font-medium text-md text-secondary">
+            <h2
+              class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl"
+            >
+              Project Terbaru
+            </h2>
+            <p class="font-medium text-md text-secondary md:text-lg">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
               mollitia impedit aperiam voluptatem natus provident suscipit
               tempora reprehenderit excepturi molestias!
@@ -322,6 +326,56 @@
       </div>
     </section>
     <!-- portfolio section end -->
+
+    <!-- client section start -->
+    <section id="clients" class="pt-36 pb-32 bg-slate-800">
+      <div class="container">
+        <div class="w-full px-4">
+          <div class="mx-auto text-center mb-16">
+            <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
+            <h2
+              class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl"
+            >
+              Yang Pernah Bekerja Sama
+            </h2>
+            <p class="font-medium text-md text-secondary md:text-lg">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum
+              excepturi distinctio at?
+            </p>
+          </div>
+        </div>
+
+        <div class="w-full px-4">
+          <div class="flex flex-wrap items-center justify-center">
+            <a
+              href="#"
+              class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8"
+            >
+              <img src="src/img/clients/1.png" alt="Client 1" />
+            </a>
+            <a
+              href="#"
+              class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8"
+            >
+              <img src="src/img/clients/1.png" alt="Client 1" />
+            </a>
+            <a
+              href="#"
+              class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8"
+            >
+              <img src="src/img/clients/1.png" alt="Client 1" />
+            </a>
+            <a
+              href="#"
+              class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8"
+            >
+              <img src="src/img/clients/1.png" alt="Client 1" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- client section end -->
 
     <script src="src/js/script.js"></script>
   </body>
