fixing bug and add dark mode

--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meliusa's Page</title>
     <link rel="stylesheet" href="src/css/output.css" />
+    <script>
+      if (
+        localStorage.theme === "dark" ||
+        (!("theme" in localStorage) &&
+          window.matchMedia("(prefers-color-scheme: dark)").matches)
+      ) {
+        document.documentElement.classList.add("dark");
+      } else {
+        document.documentElement.classList.remove("dark");
+      }
+    </script>
   </head>
   <body>
     <!-- header section start -->
@@ -38,50 +49,66 @@
 
             <nav
               id="nav-menu"
-              class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none"
+              class="dark:bg-dark lg:dark:bg-transparent dark:shadow-primary hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none"
             >
               <ul class="block lg:flex">
                 <li class="group">
                   <a
                     href="#home"
-                    class="flex py-2 mx-8 text-base text-dark group-hover:text-primary"
+                    class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white"
                     >Beranda</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#about"
-                    class="flex py-2 mx-8 text-base text-dark group-hover:text-primary"
+                    class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white"
                     >About</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#portfolio"
-                    class="flex py-2 mx-8 text-base text-dark group-hover:text-primary"
+                    class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white"
                     >Portfolio</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#clients"
-                    class="flex py-2 mx-8 text-base text-dark group-hover:text-primary"
+                    class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white"
                     >Clients</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#blog"
-                    class="flex py-2 mx-8 text-base text-dark group-hover:text-primary"
+                    class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white"
                     >Blog</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#contact"
-                    class="flex py-2 mx-8 text-base text-dark group-hover:text-primary"
+                    class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white"
                     >Contact</a
                   >
+                </li>
+                <li class="flex items-center pl-8 mt-3 lg:mt-0">
+                  <div class="flex">
+                    <span class="mr-2 text-sm text-slate-500">Light</span>
+                    <input type="checkbox" class="hidden" id="dark-toggle" />
+                    <label for="dark-toggle">
+                      <div
+                        class="flex items-center h-5 p-1 rounded-full cursor-pointer w-9 bg-slate-500"
+                      >
+                        <div
+                          class="w-4 h-4 transition duration-300 ease-in-out bg-white rounded-full toggle-circle"
+                        ></div>
+                      </div>
+                    </label>
+                    <span class="ml-2 text-sm text-slate-500">Dark</span>
+                  </div>
                 </li>
               </ul>
             </nav>
@@ -92,24 +119,25 @@
     <!-- header section end -->
 
     <!-- hero section start -->
-    <section id="home" class="pt-36">
+    <section id="home" class="pt-36 dark:bg-dark">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="self-center w-full px-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">
               Halo Semua 👋🏿, Saya
-              <span class="block mt-1 text-4xl font-bold text-dark lg:text-5xl"
+              <span
+                class="block mt-1 text-4xl font-bold text-dark lg:text-5xl dark:text-white"
                 >Meliusa Nora Hariyanti</span
               >
             </h1>
             <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe,
               voluptas.
-              <span class="text-dark">Lorem, ipsum.</span>
+              <span class="text-dark dark:text-white">Lorem, ipsum.</span>
             </h2>
             <p class="mb-10 font-medium leading-relaxed text-secondary">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              <span class="font-bold text-dark">Lorem.!</span>
+              <span class="font-bold text-dark dark:text-white">Lorem.!</span>
             </p>
             <a
               href="#"
@@ -122,10 +150,10 @@
               <img
                 src="src/img/meliusa.png"
                 alt="Meliusa Nora Hariyanti"
-                class="max-w-full mx-auto"
+                class="relative z-10 max-w-full mx-auto"
               />
               <span
-                class="absolute bottom-0 -translate-x-1/2 -z-10 left-1/2 md:scale-125"
+                class="absolute bottom-0 -translate-x-1/2 left-1/2 md:scale-125"
               >
                 <svg
                   width="400"
@@ -148,14 +176,16 @@
     <!-- hero section end -->
 
     <!-- about section start -->
-    <section id="about" class="pb-32 pt-36">
+    <section id="about" class="pb-32 pt-36 dark:bg-dark">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full px-4 mb-10 lg:w-1/2">
             <h4 class="mb-3 text-lg font-bold uppercase text-primary">
               Tentang Saya
             </h4>
-            <h2 class="max-w-md mb-5 text-3xl font-bold text-dark lg:text-4xl">
+            <h2
+              class="max-w-md mb-5 text-3xl font-bold text-dark lg:text-4xl dark:text-white"
+            >
               Lorem ipsum dolor sit.
             </h2>
             <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">
@@ -165,7 +195,7 @@
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3
-              class="mb-4 text-2xl font-semibold text-dark lg:text-3xl lg:pt-10"
+              class="mb-4 text-2xl font-semibold text-dark lg:text-3xl lg:pt-10 dark:text-white"
             >
               Mari Terhubung
             </h3>
@@ -238,13 +268,13 @@
     <!-- about section end -->
 
     <!-- portfolio section start -->
-    <section id="portfolio" class="pb-16 pt-36 bg-slate-100">
+    <section id="portfolio" class="pb-16 pt-36 bg-slate-100 dark:bg-slate-800">
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto mb-16 text-center">
             <h4 class="mb-2 text-lg font-semibold text-primary">Portfolio</h4>
             <h2
-              class="mb-4 text-3xl font-bold text-dark sm:text-4xl lg:text-5xl"
+              class="mb-4 text-3xl font-bold text-dark sm:text-4xl lg:text-5xl dark:text-white"
             >
               Project Terbaru
             </h2>
@@ -266,7 +296,9 @@
                 width="w-full"
               />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark">
+            <h3
+              class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white"
+            >
               Lorem ipsum dolor sit.
             </h3>
             <p class="text-base font-medium text-secondary">
@@ -282,7 +314,9 @@
                 width="w-full"
               />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark">
+            <h3
+              class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white"
+            >
               Lorem ipsum dolor sit.
             </h3>
             <p class="text-base font-medium text-secondary">
@@ -298,7 +332,9 @@
                 width="w-full"
               />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark">
+            <h3
+              class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white"
+            >
               Lorem ipsum dolor sit.
             </h3>
             <p class="text-base font-medium text-secondary">
@@ -314,7 +350,9 @@
                 width="w-full"
               />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark">
+            <h3
+              class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white"
+            >
               Lorem ipsum dolor sit.
             </h3>
             <p class="text-base font-medium text-secondary">
@@ -328,13 +366,13 @@
     <!-- portfolio section end -->
 
     <!-- client section start -->
-    <section id="clients" class="pb-32 pt-36 bg-slate-800">
+    <section id="clients" class="pb-32 pt-36 bg-slate-800 dark:bg-slate-300">
       <div class="container">
         <div class="w-full px-4">
           <div class="mx-auto mb-16 text-center">
             <h4 class="mb-2 text-lg font-semibold text-primary">Clients</h4>
             <h2
-              class="mb-4 text-3xl font-bold text-white sm:text-4xl lg:text-5xl"
+              class="mb-4 text-3xl font-bold text-white sm:text-4xl lg:text-5xl dark:text-dark"
             >
               Yang Pernah Bekerja sama
             </h2>
@@ -378,13 +416,13 @@
     <!-- client section end -->
 
     <!-- blog section start -->
-    <section id="blog" class="pb-32 pt-36 bg-slate-100">
+    <section id="blog" class="pb-32 pt-36 bg-slate-100 dark:bg-dark">
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto mb-16 text-center">
             <h4 class="mb-2 text-lg font-semibold text-primary">Blog</h4>
             <h2
-              class="mb-4 text-3xl font-bold text-dark sm:text-4xl lg:text-5xl"
+              class="mb-4 text-3xl font-bold text-dark sm:text-4xl lg:text-5xl dark:text-white"
             >
               Tulisan Terkini
             </h2>
@@ -397,13 +435,15 @@
 
         <div class="flex flex-wrap">
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="mb-10 overflow-hidden bg-white shadow-lg rounded-xl">
+            <div
+              class="mb-10 overflow-hidden bg-white shadow-lg rounded-xl dark:bg-slate-800"
+            >
               <img src="src/img/portfolio/1.jpg" alt="" class="w-full" />
               <div class="py-8 px-9">
                 <h3>
                   <a
                     href="#"
-                    class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary"
+                    class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary dark:text-white"
                     >Tips Belajar Programming</a
                   >
                 </h3>
@@ -420,13 +460,15 @@
             </div>
           </div>
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="mb-10 overflow-hidden bg-white shadow-lg rounded-xl">
+            <div
+              class="mb-10 overflow-hidden bg-white shadow-lg rounded-xl dark:bg-slate-800"
+            >
               <img src="src/img/portfolio/1.jpg" alt="" class="w-full" />
               <div class="py-8 px-9">
                 <h3>
                   <a
                     href="#"
-                    class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary"
+                    class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary dark:text-white"
                     >Tips Belajar Programming</a
                   >
                 </h3>
@@ -443,13 +485,15 @@
             </div>
           </div>
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="mb-10 overflow-hidden bg-white shadow-lg rounded-xl">
+            <div
+              class="mb-10 overflow-hidden bg-white shadow-lg rounded-xl dark:bg-slate-800"
+            >
               <img src="src/img/portfolio/1.jpg" alt="" class="w-full" />
               <div class="py-8 px-9">
                 <h3>
                   <a
                     href="#"
-                    class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary"
+                    class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary dark:text-white"
                     >Tips Belajar Programming</a
                   >
                 </h3>
@@ -466,13 +510,15 @@
             </div>
           </div>
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="mb-10 overflow-hidden bg-white shadow-lg rounded-xl">
+            <div
+              class="mb-10 overflow-hidden bg-white shadow-lg rounded-xl dark:bg-slate-800"
+            >
               <img src="src/img/portfolio/1.jpg" alt="" class="w-full" />
               <div class="py-8 px-9">
                 <h3>
                   <a
                     href="#"
-                    class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary"
+                    class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary dark:text-white"
                     >Tips Belajar Programming</a
                   >
                 </h3>
@@ -494,13 +540,13 @@
     <!-- blog section end -->
 
     <!-- contact section start -->
-    <section id="contact" class="pb-32 pt-36">
+    <section id="contact" class="pb-32 pt-36 dark:bg-slate-800">
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto mb-16 text-center">
             <h4 class="mb-2 text-lg font-semibold text-primary">Contact</h4>
             <h2
-              class="mb-4 text-3xl font-bold text-dark sm:text-4xl lg:text-5xl"
+              class="mb-4 text-3xl font-bold text-dark sm:text-4xl lg:text-5xl dark:text-white"
             >
               Hubungi Kami
             </h2>
@@ -721,6 +767,16 @@
       </div>
     </footer>
     <!-- footer section end -->
+
+    <!-- back to top start -->
+    <a
+      href="#home"
+      id="to-top"
+      class="fixed justify-center items-center bottom-4 right-4 rounded-full h-14 w-14 bg-primary z-[9999] p-4 hover:animate-pulse hidden"
+    >
+      <span class="block w-5 h-5 mt-2 rotate-45 border-t-2 border-l-2"></span
+    ></a>
+    <!-- back to top end -->
 
     <script src="src/js/script.js"></script>
   </body>
