change bg color

--- a/index.html
+++ b/index.html
@@ -288,7 +288,10 @@
     <!-- About Section End -->
 
     <!-- Portfolio Section Start -->
-    <section id="portfolio" class="pb-16 bg-slate-100 pt-36 dark:bg-slate-800">
+    <section
+      id="portfolio"
+      class="pb-16 bg-light_yellow pt-36 dark:bg-slate-800"
+    >
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto mb-16 text-center">
@@ -388,11 +391,13 @@
     <!-- Portfolio Section End -->
 
     <!-- Clients Section Start -->
-    <section id="clients" class="pb-32 bg-slate-800 pt-36 dark:bg-slate-300">
+    <section id="clients" class="pb-32 bg-dark pt-36 dark:bg-dark_orange">
       <div class="container">
         <div class="w-full px-4">
           <div class="mx-auto mb-16 text-center">
-            <h4 class="mb-2 text-lg font-semibold uppercase text-primary">
+            <h4
+              class="mb-2 text-lg font-semibold uppercase text-primary dark:text-white"
+            >
               Clients
             </h4>
             <h2
