add more projects

--- a/index.html
+++ b/index.html
@@ -315,6 +315,30 @@
           <div class="p-4 mb-12 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
               <img
+                src="src/img/portfolio/4.png"
+                alt="Portfolio"
+                class="w-full h-64"
+              />
+            </div>
+            <h3
+              class="mt-5 mb-3 text-xl font-semibold truncate text-dark dark:text-white"
+            >
+              Portfolio Website
+            </h3>
+            <p class="text-base font-medium text-secondary line-clamp-3">
+              This portfolio website showcases a collection of my work and
+              projects, designed using Tailwind CSS. With its responsive and
+              modern design, the website highlights my skills and
+              accomplishments in a visually appealing way. Tailwind's
+              utility-first approach allowed for rapid development and
+              customization, ensuring a unique and user-friendly experience.
+              Explore my projects to see the range of my capabilities and the
+              quality of my work.
+            </p>
+          </div>
+          <div class="p-4 mb-12 md:w-1/2">
+            <div class="overflow-hidden rounded-md shadow-md">
+              <img
                 src="src/img/portfolio/3.png"
                 alt="Portfolio"
                 class="w-full h-64"
@@ -385,6 +409,16 @@
               design.
             </p>
           </div>
+        </div>
+        <!-- Additional Information Section -->
+        <div class="w-full text-center">
+          <h4 class="mb-2 text-lg font-semibold text-primary">
+            <a
+              href="#"
+              class=" text-primary hover:underline"
+              >View More Projects</a
+            >
+          </h3>
         </div>
       </div>
     </section>
