fix home section

--- a/index.html
+++ b/index.html
@@ -133,16 +133,7 @@
           <h4 class="mb-3 text-lg font-bold uppercase text-primary">
             About Me
           </h4>
-          <p class="max-w-xl text-base font-medium text-justify text-secondary lg:text-lg">
-            Hello! My name is MELIUSA NORA HARIYANTI. I am a fresh graduate in
-            Information Technology with experience as a Fullstack Developer,
-            System Analyst, and Quality Assurance. During my time as a
-            Fullstack Developer, I was appointed as a team leader, managing
-            both front-end and back-end development for web applications. I
-            also possess strong skills in system analysis and software quality
-            testing. I am eager to further enhance my expertise and contribute
-            to innovative projects in the technology field.
-          </p>
+          <p class="max-w-xl text-base font-medium text-justify text-secondary lg:text-lg"> I am a fresh graduate in Information Technology from Politeknik Negeri Malang (State Polytechnic of Malang), with a strong background in IT. My experience includes contributing to various software development projects. Currently, I am focused on expanding my skills and expertise in both web and mobile development. I have hands-on experience with TailwindCSS for frontend design and Laravel for backend development, and I am actively enhancing my knowledge in mobile development. </p>
         </div>
         <div class="w-full px-4 lg:w-1/2">
           <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:text-3xl">
