add my experiences

--- a/index.html
+++ b/index.html
@@ -133,9 +133,17 @@
           <h4 class="mb-3 text-lg font-bold uppercase text-primary">
             About Me
           </h4>
-          <p class="max-w-xl text-base font-medium text-justify text-secondary lg:text-lg"> I am a fresh graduate in Information Technology from Politeknik Negeri Malang (State Polytechnic of Malang), with a strong background in IT. My experience includes contributing to various software development projects. Currently, I am focused on expanding my skills and expertise in both web and mobile development. I have hands-on experience with TailwindCSS for frontend design and Laravel for backend development, and I am actively enhancing my knowledge in mobile development. </p>
+          <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:text-3xl">
+            It's More About Me
+          </h3>
+          <p class="max-w-xl text-base font-medium text-justify text-secondary lg:text-lg"> I am a fresh graduate in
+            Information Technology from Politeknik Negeri Malang (State Polytechnic of Malang), with a strong background
+            in IT. My experience includes contributing to various software development projects. Currently, I am focused
+            on expanding my skills and expertise in both web and mobile development. I have hands-on experience with
+            TailwindCSS for frontend design and Laravel for backend development, and I am actively enhancing my
+            knowledge in mobile development. </p>
         </div>
-        <div class="w-full px-4 lg:w-1/2">
+        <div class="w-full px-4 mb-10 lg:w-1/2">
           <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:text-3xl">
             Let's Connect!
           </h3>
@@ -177,6 +185,65 @@
               </svg>
             </a>
           </div>
+        </div>
+        <div class="w-full px-4">
+          <div class="max-w-xl mx-auto mb-16 text-center">
+            <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:text-3xl">
+              My Experiences
+            </h3>
+          </div>
+        </div>
+        <div class="grid w-full grid-cols-9 px-2 mx-auto max-w-7xl">
+          <!-- Stack 1 -->
+          <div class="w-full h-full col-span-4 ">
+            <div class="w-full h-full p-2 rounded-md bg-primary md:pl-4">
+              <h1 class="py-2 text-xl font-medium text-white">Fullstack Developer</h1>
+              <p class="py-2 text-base font-medium text-white">CV. Intermedia Technology Corp • Internship</p>
+              <p class="text-xs text-justify text-gray-100 sm:text-sm">• Led the development team at Intermedia Technology Corp, overseeing software lifecycle from design to deployment. <br>
+                • Managed projects, addressed technical issues, and coordinated team efforts for successful project outcomes.</p>
+                <p class="py-2 text-base font-medium text-white">2024 - 2024 (Six Months)</p>
+            </div>
+          </div>
+          <div class="relative flex items-center justify-center w-full h-full col-span-1">
+            <div class="w-1 h-full bg-secondary"></div>
+            <div class="absolute z-10 w-6 h-6 text-center text-white rounded-full bg-primary">1</div>
+          </div>
+          <div class="w-full h-full col-span-4"></div>
+
+
+          <!-- Stack 2 -->
+          <div class="w-full h-full col-span-4"></div>
+          <div class="relative flex items-center justify-center w-full h-full col-span-1">
+            <div class="w-1 h-full bg-secondary"></div>
+            <div class="absolute z-10 w-6 h-6 text-center text-white rounded-full bg-primary">2</div>
+          </div>
+          <div class="w-full h-full col-span-4 ">
+            <div class="w-full h-full p-2 rounded-md bg-primary md:pl-4">
+              <h1 class="py-2 text-xl font-medium text-white">Player</h1>
+              <p class="py-2 text-base font-medium text-white">Lita Global • Freelance</p>
+              <p class="text-xs text-justify text-gray-100 sm:text-sm">• Delivered high-quality gaming services to clients, focusing on optimizing user experience through system functionality analysis. <br>
+                • Actively engaged in community events, applying problem-solving skills and managing real-time feedback similar to QA practices. <br>
+                • Maintained effective communication with clients and the team, ensuring smooth project execution in development environments.</p>
+                <p class="py-2 text-base font-medium text-white">2023 - 2024 (1 yr)</p>
+            </div>
+          </div>
+
+          <!-- Stack 3 -->
+          <div class="w-full h-full col-span-4 ">
+            <div class="w-full h-full p-2 rounded-md bg-primary md:pl-4">
+              <h1 class="py-2 text-xl font-medium text-white">QC Sparepart Engine</h1>
+              <p class="py-2 text-base font-medium text-white">PT. Evercoss Technology Indonesia • Internship</p>
+              <p class="text-xs text-justify text-gray-100 sm:text-sm">• Conducted comprehensive quality assurance and testing for software applications, ensuring adherence to project specifications. <br>
+                • Obtained Level 1 Mobile Device Service Competency Certificate, showcasing proficiency in system diagnostics and maintenance. <br>
+                • Maintained high product quality through detailed inspections and testing protocols at PT. Evercoss Technology Indonesia.</p>
+                <p class="py-2 text-base font-medium text-white">2018 - 2019 (Six Months)</p>
+            </div>
+          </div>
+          <div class="relative flex items-center justify-center w-full h-full col-span-1">
+            <div class="w-1 h-full bg-secondary"></div>
+            <div class="absolute z-10 w-6 h-6 text-center text-white rounded-full bg-primary">3</div>
+          </div>
+          <div class="w-full h-full col-span-4"></div>
         </div>
       </div>
     </div>
