add my experience

--- a/index.html
+++ b/index.html
@@ -244,6 +244,23 @@
             <div class="absolute z-10 w-6 h-6 text-center text-white rounded-full bg-primary">3</div>
           </div>
           <div class="w-full h-full col-span-4"></div>
+
+          <!-- Stack 2 -->
+          <div class="w-full h-full col-span-4"></div>
+          <div class="relative flex items-center justify-center w-full h-full col-span-1">
+            <div class="w-1 h-full bg-secondary"></div>
+            <div class="absolute z-10 w-6 h-6 text-center text-white rounded-full bg-primary">4</div>
+          </div>
+          <div class="w-full h-full col-span-4 ">
+            <div class="w-full h-full p-2 rounded-md bg-primary md:pl-4">
+              <h1 class="py-2 text-xl font-medium text-white">Operator</h1>
+              <p class="py-2 text-base font-medium text-white">Zeus Net Probolinggo • Full-time</p>
+              <p class="text-xs text-justify text-gray-100 sm:text-sm">• Managed daily operational tasks at Zeus Net, optimizing computer systems for seamless internet service. <br>
+                • Provided technical support, resolving complex issues to enhance problem-solving skills and customer service proficiency. <br>
+                • Gained in-depth knowledge of network management and system administration, contributing to effective system performance.</p>
+                <p class="py-2 text-base font-medium text-white">2014 - 2015 (1 yr)</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
