--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                   class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white">Portfolios</a>
               </li>
               <li class="group">
+                <a href="#client"
+                  class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white">Clients</a>
+              </li>
+              <li class="group">
                 <a href="#resume"
                   class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white">Resume</a>
               </li>
@@ -389,6 +393,10 @@
               <img src="src/img/tech/cloud.jpg" alt="Cloud" class="mx-auto w-14 h-14">
               <p class="text-base">Cloud</p>
             </div>
+            <div class="flex flex-col items-center justify-center w-24 h-24 bg-white rounded-md shadow-md">
+              <img src="src/img/tech/git.png" alt="Git" class="mx-auto w-14 h-14">
+              <p class="text-base">Git</p>
+            </div>
           </div>
         </div>
       </div>
@@ -482,7 +490,7 @@
   <!-- Portfolio Section End -->
 
   <!-- Clients Section Start -->
-  <section id="clients" class="pb-32 bg-dark pt-36 dark:bg-dark_orange">
+  <section id="client" class="pb-32 bg-dark pt-36 dark:bg-dark_orange">
     <div class="container">
       <div class="w-full px-4">
         <div class="mx-auto mb-16 text-center">
