--- a/index.html
+++ b/index.html
@@ -649,25 +649,25 @@
         </div>
       </div>
 
-      <form>
+      <form action="https://formspree.io/f/xwpedvjl" method="POST">
         <div class="w-full lg:mx-auto lg:w-2/3">
           <div class="w-full px-4 mb-8">
             <label for="name" class="text-base font-bold text-primary">Name</label>
-            <input type="text" id="name"
+            <input type="text" name="name" id="name" required
               class="w-full p-3 rounded-md bg-slate-200 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary" />
           </div>
           <div class="w-full px-4 mb-8">
             <label for="email" class="text-base font-bold text-primary">Email</label>
-            <input type="email" id="email"
+            <input type="email" name="email" id="email" required
               class="w-full p-3 rounded-md bg-slate-200 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary" />
           </div>
           <div class="w-full px-4 mb-8">
             <label for="message" class="text-base font-bold text-primary">Message</label>
-            <textarea type="email" id="email"
+            <textarea name="message" id="message" required
               class="w-full h-32 p-3 rounded-md bg-slate-200 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary"></textarea>
           </div>
           <div class="w-full px-4">
-            <button
+            <button type="submit"
               class="w-full px-8 py-3 text-base font-semibold text-white transition duration-500 rounded-full bg-primary hover:opacity-80 hover:shadow-lg">
               Send
             </button>
