--- a/index.html
+++ b/index.html
@@ -649,21 +649,21 @@
         </div>
       </div>
 
-      <form action="https://formspree.io/f/xwpedvjl" method="POST">
+      <form id="contact-form" action="https://formspree.io/f/xwpedvjl" method="POST" onsubmit="resetForm()">
         <div class="w-full lg:mx-auto lg:w-2/3">
           <div class="w-full px-4 mb-8">
             <label for="name" class="text-base font-bold text-primary">Name</label>
-            <input type="text" name="name" id="name" required
+            <input type="text" name="name" id="name" required autocomplete="off"
               class="w-full p-3 rounded-md bg-slate-200 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary" />
           </div>
           <div class="w-full px-4 mb-8">
             <label for="email" class="text-base font-bold text-primary">Email</label>
-            <input type="email" name="email" id="email" required
+            <input type="email" name="email" id="email" required autocomplete="off"
               class="w-full p-3 rounded-md bg-slate-200 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary" />
           </div>
           <div class="w-full px-4 mb-8">
             <label for="message" class="text-base font-bold text-primary">Message</label>
-            <textarea name="message" id="message" required
+            <textarea name="message" id="message" required autocomplete="off"
               class="w-full h-32 p-3 rounded-md bg-slate-200 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary"></textarea>
           </div>
           <div class="w-full px-4">
@@ -795,6 +795,10 @@
       typeSpeed: 50,
       loop: true,
     });
+
+    function resetForm() {
+      document.getElementById('contact-form').reset();
+    }
   </script>
 </body>
 
